--- a/README.Rmd
+++ b/README.Rmd
@@ -61,7 +61,5 @@ plot(prediction, trt.col.name = "trt", type = "KM")
 # plot(prediction, trt.col.name = "trt", type = 120)
 ```
 
-As `.md` file doesn't show interactive plots, please check webpage 
-[https://sidiwang.net/osbmapage/](https://sidiwang.net/osbmapage/) 
-for the last two plots.
+As `.md` file doesn't show interactive plots, please check file `demo.Rmd` for the last two plots. Please download `demo.Rmd` and view it in browser. 
 
