--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,12 @@
 ---
-output: github_document
+output: 
+  github_document:
+    toc: true
+    toc_depth: 2
+  html_document:
+    toc: true
+    theme: united
+    keep_md: true
 ---
 
 # osbma
